--- a/Week1.ipynb
+++ b/Week1.ipynb
@@ -48,7 +48,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.9"
-  }
+  },
+  "toc-autonumbering": true,
+  "toc-showcode": true
  },
  "nbformat": 4,
  "nbformat_minor": 5
